--- a/cliente/package.json
+++ b/cliente/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.2",
+    "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
