panel de administracion y creacion de usuarios (hospital_doctor  y  hospital_monitor logica implementada)

--- a/servidor/package.json
+++ b/servidor/package.json
@@ -9,6 +9,7 @@
   "name": "servidor",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.10"
   },
