--- a/cliente/package.json
+++ b/cliente/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.23.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
