--- a/cliente/package.json
+++ b/cliente/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.2",
+    "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
     "moment": "^2.30.1",
