--- a/servidor/package.json
+++ b/servidor/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@google-cloud/firestore": "^7.11.5",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
     "morgan": "^1.10.1"
   },
