--- a/cliente/package.json
+++ b/cliente/package.json
@@ -22,6 +22,7 @@
     "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
     "styled-components": "^6.1.19",
